--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/redux-saga": "^0.10.5",
     "antd": "^4.9.1",
+    "axios": "^0.21.0",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -49,5 +51,6 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.165"
   }
 }
