--- a/package.json
+++ b/package.json
@@ -32,9 +32,23 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,tsx,ts}": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
+      "airbnb-base",
+      "plugin:prettier/recommended",
       "react-app/jest"
     ]
   },
@@ -51,6 +65,16 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.165"
+    "@types/lodash": "^4.14.165",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.3.6",
+    "lint-staged": "^10.5.3"
   }
 }
